W-14445577: Fix hawk tests in Java 17 (#12984)
* Add troubleshooting information for propertiesUtils errors
* Improve assertion failure message for investigating flakies